--- a/ps_1/PS_1.ipynb
+++ b/ps_1/PS_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a714b118",
+   "id": "f5192c78",
    "metadata": {
     "tags": []
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95775a53",
+   "id": "f995b75e",
    "metadata": {},
    "source": [
     "# PS.1 (evaluating polynomials)\n",
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "204f99b7",
+   "id": "1642a9f9",
    "metadata": {
     "tags": []
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a75c20b",
+   "id": "8fda4635",
    "metadata": {},
    "source": [
     "# PS.1 (ill-conditioned deblurring) \n",
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8d0bae7a",
+   "id": "c15bc928",
    "metadata": {
     "tags": []
    },
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e8d6a8e0",
+   "id": "c8ec0849",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e1a0e4df",
+   "id": "963f1ecd",
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ac63e2c",
+   "id": "d8b15fc5",
    "metadata": {
     "tags": []
    },
@@ -1150,7 +1150,7 @@
     "\n",
     "$$p_{\\alpha} = \\frac{2^{25} - 2^{24}}{2^{23}} = 2$$\n",
     "\n",
-    "which means that only every second integer in this range can be represented exactly. Starting from the lowest representable positive integer in this range $x = 2^24 = 16777216$ we see that $x + 1 = 16777217$ is rounded down to $x = 16777216$. Only $x + 2 = 16777218$ is represented again and so on. Using this result we pick the first three odd numbers in this range which are 16777217, 16777219 and 16777221 and look at there Float32 representation to illustrate as required for c).\n",
+    "which means that only every second integer in this range can be represented exactly. Starting from the lowest representable positive integer in this range $x = 2^{24} = 16777216$ we see that $x + 1 = 16777217$ is rounded down to $x = 16777216$. Only $x + 2 = 16777218$ is represented again and so on. Using this result we pick the first three odd numbers in this range which are 16777217, 16777219 and 16777221 and look at there Float32 representation to illustrate as required for c).\n",
     "\n",
     "c) Illustrate and verify your theoretical findings in a) and b) by julia."
    ]
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "04aa6979",
+   "id": "48095f98",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "761dac8e",
+   "id": "05b18f9b",
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "86b77270",
+   "id": "08b2b51d",
    "metadata": {
     "tags": []
    },
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a41b982",
+   "id": "d29158a3",
    "metadata": {},
    "outputs": [],
    "source": [
